♻️ refactor: refactors logic that chooses new message to be displayed
descubra

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     Hoje é dia ?
   </header>
 
-  <p id="message"></p>
+  <p id="message">Descubra</p>
 
   <button id="change-message">Clique</button>
 
