💎 style: formats with prettierd

--- a/index.html
+++ b/index.html
@@ -1,24 +1,20 @@
-<!DOCTYPE>
-<!DOCTYPE html>
+<!DOCTYPE >
+<!doctype html>
 <html lang="en">
+  <head>
+    <title>Hoje é dia ?</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="style.css" rel="stylesheet" />
+  </head>
 
-<head>
-  <title>Hoje é dia ?</title>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="style.css" rel="stylesheet">
-</head>
+  <body>
+    <header>Hoje é dia ?</header>
 
-<body>
-  <header>
-    Hoje é dia ?
-  </header>
+    <p id="message">Descubra</p>
 
-  <p id="message">Descubra</p>
+    <button id="change-message">Clique</button>
 
-  <button id="change-message">Clique</button>
-
-  <script src="script.js"></script>
-</body>
-
+    <script src="script.js"></script>
+  </body>
 </html>
